# chimera-mapper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: install.sh  uninstall.sh
src/: config.rs  hid.rs  main.rs  platform.rs
src/backend/: linux.rs  macos.rs  mod.rs  stub.rs
