[package]
name = "chimera-mapper"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/SKetU-l/chimera-mapper"
repository = "https://github.com/SKetU-l/chimera-mapper"
description = "Cross-platform HID mapper for Chimera mouse side buttons"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
hidapi = { version = "2.6.5", features = ["macos-shared-device"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
